# wildcat

./: README.md
python/: Makefile  README.md  pyproject.toml
python/notes/: journals.md
python/notes/static/: wiley_fullcollection_2024_2023-11-01.TXT
python/wildcat/: main.py
python/wildcat/sources/: __init__.py
